[profile.release]
strip = true

[package]
name = "actual-game"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.101"
bytemuck = {version = "1.25.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.8"
futures-lite = "2.6.1"
log = "0.4.29"
pollster = "0.4.0"
tobj = {version = "4.0.3", default-features = false, features = ["futures", "log"] }
wasm-bindgen = "0.2"
wgpu = "28.0.0"
winit = "0.30.12"

[dependencies.image]
version = "0.25.9"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0.101"
fs_extra = "1.3.0"
glob = "0.3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "28.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
reqwest = "0.13.2"
